Replace 11u code with equivalent 8u code
Replace string.isBlank() by string.trim().isEmpty().

Replace new FileInputStream(file).readAllBytes() by
Files.readAllBytes(file.toPath()).